# notifications

./: .dokerignore  .gitignore  README.md  docker-compose.yaml  dockerfile  pyproject.toml  pytest.ini
app/: main.py
app/api/: dependencies.py
app/api/middlewares/: user.py
app/api/routers/: events.py  health.py  notifications.py  ui.py
app/api/schemas/: event.py  notification.py
app/db/: db.py  settings.py
app/db/models/: __init__.py  base.py  enums.py  notification.py  user.py
app/errors/: notification_error.py  user_error.py
app/logger/: logging_config.py  structlog_config.py
app/migrations/: env.py
app/migrations/versions/: cfc28a4acd38_.py
app/notification_templates/: base.py  order_cancelled.py  order_paid.py  registry.py  user_registered.py
app/repositories/: notification_repository.py  user_repository.py
app/senders/: base.py  email_sender.py  inapp_sender.py  registry.py  telegram_sender.py
app/services/: event_service.py  notification_service.py  user_service.py
app/static/css/: main.css
app/static/js/: notifications.js  sse.js
app/templates/: base.html  index.html  notifications.html
app/workers/: notification_worker.py
tests/integration/: conftest.py  test_notification_repository_integration.py  test_notification_service_integration.py
tests/unit/: conftest.py  test_notification_service_unit.py
